--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="contact-form">
-                    <form action="http://localhost:4000/send-email" method="post">
+                    <form action="https://api-gama-avocat.herokuapp.com/send-email" method="post">
                         <input type="hidden" name="_token" value="hq3WeAxkVshr5B95nXSafNNuazs3PygD0E5m7buM">                       
                         <div>
                             <input type="text" class="form-control" name="name" id="name" required placeholder="Nom*" >
