--- a/doctrine/voies_d_execution.html
+++ b/doctrine/voies_d_execution.html
@@ -126,7 +126,7 @@
                         <a style="color:#16408c" href="1.html#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white" href="voies_d_execution.html">Voies d&#039;exécution</a></li>
-                            <li><a style="color: white" href="2.html">Mode alternatif de règlement des différends</a></li>
+                            <li><a style="color: white" href="mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
                         </ul>
                     </li>
                     <li><a style="color:#16408c" href="../blog.html">Actualités</a></li>
