--- a/legislation/beninoise.html
+++ b/legislation/beninoise.html
@@ -194,7 +194,7 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2018-38.pdf">LOI N' 2018 - 38 DU 17 OCTOBRE 2018
+                                <h4><a href="../download/loi-2018-38.pdf">Loi N°2018 - 38 DU 17 OCTOBRE 2018
                                         portant création de la caisse des dépôts et
                                         consignations en République du Bénin</a></h4>
                             </div>
@@ -215,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2019-11.pdf">lot N' 2019 - 11 DU 25 FEVRIER 2019
+                                <h4><a href="../download/loi-2019-11.pdf">Loi N°2019 - 11 DU 25 FEVRIER 2019
                                         portant renforcement juridique ei judiciaire
                                         de la gouvernance publique.</a></h4>
                             </div>
@@ -236,7 +236,7 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2020-02.pdf">LOt N" 2020 - 02 DU 20 MARS 2020
+                                <h4><a href="../download/loi-2020-02.pdf">Loi N°2020 - 02 DU 20 MARS 2020
                                         portant Code des investissements en République
                                         du Bénin</a></h4>
                             </div>
@@ -258,8 +258,8 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2020-03.pdf">Loi N" 2020 - 03 DU 20 MARS 2020
-                                        <porta></porta>nt promotion et développement des
+                                <h4><a href="../download/loi-2020-03.pdf">Loi N°2020 - 03 DU 20 MARS 2020
+                                        portant promotion et développement des
                                         micros, petites et moyennes entreprises en
                                         République du Bénin.</a></h4>
                             </div>
@@ -280,7 +280,7 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2020-20.pdf">LOI N" 2O2O - 20 DU 02 SEPTEMBRE 2O2O
+                                <h4><a href="../download/loi-2020-20.pdf">LOI N°2O2O - 20 DU 02 SEPTEMBRE 2O2O
                                         portant création, organisation et fonctionnement
                                         des entreprises publiques en République du Bénin</a></h4>
                             </div>
@@ -302,8 +302,8 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2020-23.pdf">LOI N" 2O2O - 23 DU 29 SEPTEMBRE 2O2O
-                                        modifiant el complétant la loi n' 2012-15 du 18 mars 2013, modifiée, portant code de
+                                <h4><a href="../download/loi-2020-23.pdf">Loi N°2O2O - 23 DU 29 SEPTEMBRE 2O2O
+                                        modifiant et complétant la loi n°2012-15 du 18 mars 2013, modifiée, portant code de
                                         procédure pénale en République du Bénin.</a></h4>
                             </div>
                         </div>
@@ -323,8 +323,8 @@
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="../download/loi-2020-25.pdf">LOI N'2O2O - 25 DU 02 SEPTEMBRE 2O2O
-                                        portant modification de la loi no 20'18-17 du
+                                <h4><a href="../download/loi-2020-25.pdf">Loi N°2O2O - 25 DU 02 SEPTEMBRE 2O2O
+                                        portant modification de la loi n°2017-18 du
                                         25 juillet 2018 relative à la lutte contre le blanchiment de capitaux et le financement
                                         du terrorisme en République du Bénin.</a></h4>
                             </div>
