--- a/doctrine/mode_alternatif_reglement_different.html
+++ b/doctrine/mode_alternatif_reglement_different.html
@@ -94,7 +94,7 @@
                     </li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="2.html#">Expertises</a>
+                        <a style="color:#16408c" href="mode_alternatif_reglement_different.html#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <b></b> <li><a style="color: white" href="../droit/contrat.html">Droit des contrats internationaux</a></li>
                             <b></b> <li><a style="color: white" href="../droit/ppp.html">Droit des contrats PPP </a></li>
@@ -117,7 +117,7 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="2.html">Jurisprudence</a>
+                        <a style="color:#16408c" href="mode_alternatif_reglement_different.html#">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white" href="../juris/voie_d_execution.html">Voies d&#039;exécution</a></li>
                         </ul>
@@ -125,9 +125,9 @@
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="doctrine#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                                                            <li><a style="color: white" href="voies_d_execution.html">Voies d&#039;exécution</a></li>
-                                                            <li><a style="color: white" href="mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
-                                                                                </ul>
+                            <li><a style="color: white" href="voies_d_execution.html">Voies d&#039;exécution</a></li>
+                            <li><a style="color: white" href="mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
+                        </ul>
                     </li>
                     <li><a style="color:#16408c" href="../blog.html">Actualités</a></li>
 
